# docs/swagger.yaml
@@ -77,7 +77,7 @@ info:
   title: Game v0 API
   version: "1.0"
 paths:
-  /room:
+  /api/room:
     get:
       consumes:
       - application/json
@@ -116,7 +116,7 @@ paths:
       summary: Create a room
       tags:
       - Room
-  /room/{id}:
+  /api/room/{id}:
     get:
       consumes:
       - application/json
@@ -137,7 +137,7 @@ paths:
       summary: Find one room
       tags:
       - Room
-  /room/join:
+  /api/room/join:
     post:
       consumes:
       - application/json
@@ -159,7 +159,7 @@ paths:
       summary: Join a room
       tags:
       - Room
-  /user/me:
+  /api/user/me:
     get:
       consumes:
       - application/json
@@ -177,7 +177,7 @@ paths:
       summary: Get current user
       tags:
       - User
-  /user/sign-in:
+  /api/user/sign-in:
     post:
       consumes:
       - application/json
@@ -210,7 +210,7 @@ paths:
       summary: Sign in
       tags:
       - User
-  /user/sign-up:
+  /api/user/sign-up:
     post:
       consumes:
       - application/json
